src/objects/Market_Price__c.object
<CustomObject>
    <fields>
        <fullName>Buying__c</fullName>
        <label>Buying Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>Commodity</label>
        <referenceTo>Commodity__c</referenceTo>
        <relationshipLabel>Market Prices</relationshipLabel>
        <relationshipName>Market_Prices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to determine if the market price notification has been sent out to the Ewarehouse Farmers</description>
        <label>Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selling_Price__c</fullName>
        <label>Selling Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Market Price</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{000000}</displayFormat>
        <label>Market Price ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>